More i18n for platform-impl
GitOrigin-RevId: 2e27358f37d1e84d2a2625b07fe1a01fd4af5de9