@@ -1,4 +1,4 @@
-// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.ui.wizard;
 
 import com.intellij.openapi.util.NlsActions;
@@ -16,7 +16,7 @@ public abstract class WizardAction extends AbstractAction {
   }
 
   protected void setMnemonic(char value) {
-    putValue(Action.MNEMONIC_KEY, new Integer(value));
+    putValue(Action.MNEMONIC_KEY, Integer.valueOf(value));
   }
 
   public final void setName(@NlsActions.ActionText String name) {
